--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,17 @@
-# Prerequisites
-*.d
+#java specific
+*.class
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+#netbeans ignore personal stuff
+nbproject/
 
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
+## generic files to ignore
+*~
+*.lock
+*.DS_Store
+*.swp
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# Package Files #
+*.jar
+*.war
+*.ear
